--- a/notes.Rmd
+++ b/notes.Rmd
@@ -1063,17 +1063,76 @@ head(state)
 xyplot(Life.Exp ~ Income | region, data=state, layout=c(4,1))
 ```
 
+#### Panel
+```{r}
+set.seed(10)
+x <- rnorm(100)
+f <- rep(0:1, each=50)
+y <- x + f - f * x + rnorm(100, sd=0.5)
+f <- factor(f, labels=c('Group 1', 'Group 2'))
+
+xyplot(y ~ x | f, panel=function(x, y, ...) {
+    panel.xyplot(x, y, ...)  # first call the default panel function for 'xyplot'
+    panel.abline(h=median(y), lty=2)  # add a horizontal line at the median
+})
+
+xyplot(y ~ x | f, panel=function(x, y, ...) {
+    panel.xyplot(x, y, ...)  # first call the default panel function for 'xyplot'
+    panel.lmline(x, y, col=2)  # overlay a simple linear regression line
+})
+```
+
 Also:
-`bwplot`
+
+- `bwplot`  
+box-and-whiskers plots ("boxplots")
+- `histogram`  
+- `stripplot`  
+like a boxplot but with actual points
+- `dotplot`  
+plot dots on "violin strings"
+- `splom`  
+scatterplot matrix; like `pairs` in base plotting system
+- `levelplot` / `contourplot`  
+for plotting "image" data  
 
 [Return to [Table of Content]]
 
 ***
 
 ### ggplot2
+#### Scatterplot (with add-ons)
 ```{r}
 library(ggplot2)
-qplot(conc, rate, data=Puromycin)
+qplot(conc, rate, data=Puromycin, 
+      color=state,
+      geom=c('point', 'smooth'))
+```
+
+Other `geom` options:
+"density", 
+
+Other parameters:
+`shape`, `method`
+
+#### Histogram
+```{r}
+qplot(hwy, data=mpg, fill=drv)
+```
+
+#### Facets  
+panels
+```{r}
+qplot(displ, hwy, data=mpg, facets=. ~ drv)
+```
+
+```{r}
+qplot(hwy, data=mpg, facets=drv ~ ., binwidth=2)
+```
+
+
+```{r}
+qplot(conc, rate, data=Puromycin, color=state) + geom_smooth(method ='lm')
 ```
 
 [Return to [Table of Content]]
