--- a/notes.Rmd
+++ b/notes.Rmd
@@ -556,6 +556,8 @@ colSums(is.na(df))
 
 # duplicates
 sum(duplicated(df))
+# to find the indices of all duplicates (including the first occurance)
+duplicated(df) | duplicated(df, fromLast = TRUE)
 ```
 
 #### Distributions
@@ -579,7 +581,7 @@ xtabs(Freq ~ Gender + Admit, data=df)
 
 ***
 
-## Data Wrangling
+## Data Wranglings
 * [Handle Missing Values]
 * [Factor]
 * [Text]
@@ -608,6 +610,14 @@ x[good]
 `complete.cases` can also be used with dataframes:
 `complete.cases(dataframe_object)`
 
+```{r}
+df <- data.frame(x=x, y=y)
+df <- na.omit(df)
+df
+```
+
+
+
 When subsetting a vector/data frame containing `NA` using conditional, use `which`:
 ```{r}
 x[which(x>2)]
@@ -631,6 +641,10 @@ unclass(x)
 
 ```{r}
 relevel(x, ref='no')
+```
+
+```{r}
+as.numeric(x)
 ```
 
 #### Generate factor levels
@@ -949,7 +963,7 @@ par('lty')
 The plottin symbol (default is open circle).
   
 - `lty`  
-The line type. Line types can either be specified as an integer (0=blank, 1=solid (default), 2=dashed, 3=dotted, 4=dotdash, 5=longdash, 6=twodash) or as one of the character strings "blank", "solid", "dashed", "dotted", "dotdash", "longdash", or "twodash", where "blank" uses ‘invisible lines’ (i.e., does not draw them).
+The line type. Line types can either be specified as an integer (0=blank, 1=solid (default), 2=dashed, 3=dotted, 4=dotdash, 5=longdash, 6=twodash) or as one of the character strings "blank", "solid", "dashed", "dotted", "dotdash", "longdash", or "twodash", where "blank" uses âinvisible linesâ (i.e., does not draw them).
   
 - `col`  
 The plotting color. The `colors()` function provides a vector of colors by name.
@@ -989,16 +1003,6 @@ with(subset(airquality, Month!=5), points(Wind, Ozone, col='red'))
 legend('topright', pch=1, 
        col=c('blue', 'red'), 
        legend=c('May', 'Other Months'))
-```
-
-Another example of customerizing `legend`:
-```{r eval=FALSE}
-legend('topright', 
-       legend=paste0('Sub_metering_', 1:3), 
-       col=c("black","red","blue"), 
-       lty=c(1,1,1),  # the symbols are lines
-       bty='n')  # no border around legend
-
 ```
 
 Other functions that add to a plot (but do not create a plot):  
@@ -1063,77 +1067,79 @@ head(state)
 xyplot(Life.Exp ~ Income | region, data=state, layout=c(4,1))
 ```
 
-#### Panel
-```{r}
-set.seed(10)
-x <- rnorm(100)
-f <- rep(0:1, each=50)
-y <- x + f - f * x + rnorm(100, sd=0.5)
-f <- factor(f, labels=c('Group 1', 'Group 2'))
-
-xyplot(y ~ x | f, panel=function(x, y, ...) {
-    panel.xyplot(x, y, ...)  # first call the default panel function for 'xyplot'
-    panel.abline(h=median(y), lty=2)  # add a horizontal line at the median
-})
-
-xyplot(y ~ x | f, panel=function(x, y, ...) {
-    panel.xyplot(x, y, ...)  # first call the default panel function for 'xyplot'
-    panel.lmline(x, y, col=2)  # overlay a simple linear regression line
-})
-```
-
 Also:
-
-- `bwplot`  
-box-and-whiskers plots ("boxplots")
-- `histogram`  
-- `stripplot`  
-like a boxplot but with actual points
-- `dotplot`  
-plot dots on "violin strings"
-- `splom`  
-scatterplot matrix; like `pairs` in base plotting system
-- `levelplot` / `contourplot`  
-for plotting "image" data  
+`bwplot`
 
 [Return to [Table of Content]]
 
 ***
 
 ### ggplot2
-#### Scatterplot (with add-ons)
+website: http://ggplot2.org
+
+#### `qplot`
+Scatterplot:
 ```{r}
 library(ggplot2)
-qplot(conc, rate, data=Puromycin, 
+```
+
+```{r}
+qplot(conc, rate, 
+      data=Puromycin, 
+      shape=state)
+```
+
+```{r}
+qplot(conc, rate, 
+      data=Puromycin, 
       color=state,
       geom=c('point', 'smooth'))
 ```
 
-Other `geom` options:
-"density", 
-
-Other parameters:
-`shape`, `method`
-
-#### Histogram
 ```{r}
+qplot(conc, rate, 
+      data=Puromycin, 
+      color=state) +
+      geom_smooth(method='lm')
+```
+
+Histrograms:
+```{r}
+library('datasets')
 qplot(hwy, data=mpg, fill=drv)
+qplot(hwy, data=mpg, geom='density', color=drv)
 ```
 
-#### Facets  
-panels
+Facets:
 ```{r}
-qplot(displ, hwy, data=mpg, facets=. ~ drv)
+qplot(displ, hwy, data=mpg, facets=.~drv)
+qplot(hwy, data=mpg, facets=drv~., binwidth=2)
 ```
+left of ~ : rows of the panel
+right of ~ : columns of the panel
 
+
+#### `ggplot`
 ```{r}
-qplot(hwy, data=mpg, facets=drv ~ ., binwidth=2)
+ggplot(data, aes(x, y)) 
+    + geom_point(color='steelblue', size=4, alpha=1/2)
+    + geom_smooth(size=4, linetype=3, method='lm', se=FALSE)
+    + facet_grid(. ~ factor.var)
+    + labs(title, x, y)
+    + theme_bw(base_family='Times') # base_family: font
 ```
 
+Assign color to a data variable
+```{r eval=FALSE}
+geom_point(aes(color=factor.var), size=4, alpha=1/2)
+```
 
+Additonal options:
 ```{r}
-qplot(conc, rate, data=Puromycin, color=state) + geom_smooth(method ='lm')
+geom_line()
 ```
+
+
 
 [Return to [Table of Content]]
 
