--- a/notes.Rmd
+++ b/notes.Rmd
@@ -25,7 +25,7 @@ knitr::opts_knit$set(root.dir = normalizePath(params$home.dir))
 
 ***
 
-## Search for Documentation
+# Search for Documentation
 ```{r eval=FALSE}
 ?read.table
 help.search('data input')
@@ -41,7 +41,7 @@ str(rnorm)
 
 ***
 
-## Install/Load Packages
+# Install/Load Packages
 ```{r}
 a <- available.packages()
 head(rownames(a), 3)
@@ -100,7 +100,7 @@ source('filename.R')
 
 ***
 
-## For Loop
+# For Loop
 Use `seq_along`:
 ```{r}
 x <- c('a', 'b', 'c', 'd')
@@ -120,7 +120,7 @@ for(i in seq_len(length(x))) {
 
 ***
 
-## Loop Functions
+# Loop Functions
 * `apply`
 * `lapply`
 * `sapply`
@@ -146,7 +146,7 @@ This is because `length(dataframe)` return the number of columns in the datafram
 
 ***
 
-## Debugging Tools
+# Debugging Tools
 These are interactive tools that are meant to be used in the console:
 * `traceback`
 
@@ -174,7 +174,7 @@ options(error = recover)
 
 ***
 
-## Read/Write
+# Read/Write
 * [Read/Write R Objects]
 * [Download Data]
 * [Read/Write Excel Files]
@@ -186,19 +186,19 @@ options(error = recover)
 * [Read from HDF5]
 
 
-### Further reading:
+## Further reading:
 
 - `?connections`
 - [This R Data Import Tutorial Is Everything You Need](https://www.r-bloggers.com/this-r-data-import-tutorial-is-everything-you-need/)
 
 
-### Other database packages:
+## Other database packages:
 
 - `RPostgresql`
 - `RODBC`
 - `RMongo`
 
-### Read images:
+## Read images:
 
 - `jpeg`
 - `readbitmap`
@@ -206,14 +206,14 @@ options(error = recover)
 - `EBImage` (Bioconductor)
 
 
-### Read GIS data:
+## Read GIS data:
 
 - `rdgal`
 - `rgeos`
 - `raster`
 
 
-### Read music data:
+## Read music data:
 
 - `tuneR`
 - `seewave`
@@ -221,15 +221,15 @@ options(error = recover)
 
 ***
 
-### Read/Write R Objects
-#### `dput` & `dget` --- one R object:
+## Read/Write R Objects
+### `dput` & `dget` --- one R object:
 ```{r eval=FALSE}
 y <- data.frame(a = 1, b = 'a')
 dput(y, file = 'y.R')
 new.y <- dget('y.R')
 ```
 
-#### `dump` & `source` --- multiple R objects:
+### `dump` & `source` --- multiple R objects:
 ```{r eval=FALSE}
 x <- 'foo'
 y <- data.frame(a = 1, b = 'a')
@@ -242,7 +242,7 @@ source('data.R')
 
 ***
 
-### Download Data
+## Download Data
 ```{r eval=FALSE}
 download.file('https://ailuropoda1864.github.io/portfolio/resume_Jingfei_Cai.pdf', destfile = 'resume.pdf')
 ```
@@ -251,7 +251,7 @@ download.file('https://ailuropoda1864.github.io/portfolio/resume_Jingfei_Cai.pdf
 
 ***
 
-### Read/Write Excel Files
+## Read/Write Excel Files
 Read Excel files:
 ```{r eval=FALSE}
 library(xlsx)
@@ -267,7 +267,7 @@ write.xlsx()
 
 ***
 
-### Read XML
+## Read XML
 ```{r}
 library(XML)
 fileUrl <- 'https://www.w3schools.com/xml/simple.xml'
@@ -278,18 +278,18 @@ rootNode <- xmlRoot(doc)
 xmlName(rootNode)
 ```
 
-#### Directly access parts of the XML document:
+## Directly access parts of the XML document:
 ```{r}
 rootNode[[1]]
 rootNode[[1]][[1]]
 ```
 
-#### Programatically extract parts of the file:
+## Programatically extract parts of the file:
 ```{r}
 xmlSApply(rootNode, xmlValue)
 ```
 
-#### Extract elements using xpath:
+## Extract elements using xpath:
 ```{r xpath}
 xpathSApply(rootNode, '//name', xmlValue)
 xpathSApply(rootNode, '//price', xmlValue)
@@ -299,7 +299,7 @@ xpathSApply(rootNode, '//price', xmlValue)
 
 ***
 
-### Read HTML (Webpages)
+## Read HTML (Webpages)
 
 ```{r read HTML}
 con <- url('https://nationalzoo.si.edu/news/webcam/archive/2238', 'r')
@@ -352,7 +352,7 @@ pg2 <- GET(handle = google, path='search')
 
 ***
 
-### Read from APIs
+## Read from APIs
 ```{r eval=FALSE}
 library(httr)
 myapp <- oauth_app('twitter', key='consumerKey', secret='consumerSecret')
@@ -368,22 +368,22 @@ json2 <- jsonlite::fromJSON(toJSON(json1))
 
 ***
 
-### Read/Write JSON
-#### Read JSON:
+## Read/Write JSON
+### Read JSON:
 ```{r}
 library(jsonlite)
 jsonData <- fromJSON('https://api.github.com/users/Ailuropoda1864/repos')
 names(jsonData)
 ```
 
-#### Write data frames to JSON (result hidden):
+### Write data frames to JSON (result hidden):
 ```{r write to JSON, results='hide'}
 library(datasets)
 myjson <- toJSON(iris, pretty=TRUE)  # pretty print
 cat(myjson)
 ```
 
-#### Convert back to JSON:
+### Convert back to JSON:
 ```{r}
 iris2 <- fromJSON(myjson)
 head(iris2)
@@ -393,7 +393,7 @@ head(iris2)
 
 ***
 
-### Read from MySQL
+## Read from MySQL
 Functions covered:
 
 * `dbConnect`
@@ -482,7 +482,7 @@ dbDisconnect(hg19)
 
 ***
 
-### Read from HDF5
+## Read from HDF5
 Install R HDF 5 package:
 ```{r eval=FALSE}
 source('http://bioconductor.org/biocLite.R')
@@ -539,9 +539,9 @@ h5read(h5.file, 'foo/A', index=list(1:3, 2))
 
 ***
 
-## Exploratory Data Analysis
+# Exploratory Data Analysis
 
-#### What the actual data looks like
+## What the actual data looks like
 ```{r}
 data("UCBAdmissions")
 df <- as.data.frame(UCBAdmissions)
@@ -550,7 +550,7 @@ head(df)
 tail(df, 3)
 ```
 
-#### Numbers of rows/columns, names of rows/columns, the class of each column, any missing values, any duplicates
+## Numbers of rows/columns, names of rows/columns, the class of each column, any missing values, any duplicates
 ```{r}
 str(df)  # info() in Python
 rownames(df)  # df.index in Python
@@ -566,7 +566,7 @@ sum(duplicated(df))
 duplicated(df) | duplicated(df, fromLast = TRUE)
 ```
 
-#### Distributions
+## Distributions
 - Quantitative variables: quantiles
 - Qualatative variables: number of levels; count for each level
 ```{r}
@@ -578,7 +578,7 @@ table(df$Admit, useNA='ifany')  # value_counts in Python
 table(df$Gender, df$Dept)
 ```
 
-#### Crosstab
+## Crosstab
 ```{r}
 xtabs(Freq ~ Gender + Admit, data=df)
 ```
@@ -587,7 +587,7 @@ xtabs(Freq ~ Gender + Admit, data=df)
 
 ***
 
-## Data Wranglings
+# Data Wrangling
 * [Handle Missing Values]
 * [Factor]
 * [Text]
@@ -600,7 +600,7 @@ xtabs(Freq ~ Gender + Admit, data=df)
 * [Reshape Data]
 * [Merge Data]
 
-### Handle Missing Values
+## Handle Missing Values
 ```{r}
 x <- c(1, 2, NA, 4, NA, 5)
 bad <- is.na(x)
@@ -622,8 +622,6 @@ df <- na.omit(df)
 df
 ```
 
-
-
 When subsetting a vector/data frame containing `NA` using conditional, use `which`:
 ```{r}
 x[which(x>2)]
@@ -635,7 +633,7 @@ x[x>2]
 
 ***
 
-### Factor
+## Factor
 ```{r}
 x <- factor(c("yes", "yes", "no", "yes", "no"), levels = c("yes", "no"))
 x
@@ -653,13 +651,13 @@ relevel(x, ref='no')
 as.numeric(x)
 ```
 
-#### Generate factor levels
+### Generate factor levels
 ```{r}
 f <- gl(2, 5)
 f
 ```
 
-#### Compute factor interactions
+### Compute factor interactions
 ```{r}
 x <- rnorm(10)
 f1 <- gl(5, 2)
@@ -667,7 +665,7 @@ f2 <- gl(2, 5)
 interaction(f1, f2)
 ```
 
-#### Split
+### Split
 When more than one factors are put in a list, `split` will call `interaction` automatically:
 ```{r}
 split(x, list(f1, f2))
@@ -678,12 +676,12 @@ Drop empty levels:
 split(x, list(f1, f2), drop = TRUE)
 ```
 
-#### Create binary variables:
+### Create binary variables:
 ```{r eval=FALSE}
 ifelse(test, yes, no)
 ```
 
-#### Create categorical variables
+### Create categorical variables
 ```{r eval=FALSE}
 cut(x, breaks)
 
@@ -692,7 +690,7 @@ library(Hmisc)
 cut2(x, g=4)
 ```
 
-### Text
+## Text
 
 - `tolower` / `toupper`
 - `strsplit`
@@ -709,7 +707,7 @@ can be RegEx
 
 ***
 
-### RegEx
+## RegEx
 
 metacharacters:
 
@@ -729,7 +727,7 @@ escape:
 
 ***
 
-### Datetime
+## Datetime
 ```{r eval=FALSE}
 library(lubridate)
 today()
@@ -752,7 +750,7 @@ http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 ***
 
-### `data.table`
+## `data.table`
 ```{r load data.table}
 library(data.table)
 ```
@@ -820,12 +818,12 @@ fread(filename)
 
 ***
 
-### `plyr`
+## `plyr`
 ```{r load plyr}
 library(plyr)
 ```
 
-#### Order a dataframe by certain variables
+### Order a dataframe by certain variables
 ```{r eval=FALSE}
 arrange(dataframe, var1)
 # use base R:
@@ -835,12 +833,12 @@ dataframe[order(dataframe$var1), ]
 arrange(dataframe, desc(var1))
 ```
 
-#### Copy a data frame and add new variables
+### Copy a data frame and add new variables
 ```{r eval=FALSE}
 df2 <- mutate(df1, newCol=cut2(oldCol, g=4))
 ```
 
-#### Split-apply-combine
+### Split-apply-combine
 ```{r}
 str(InsectSprays, 3)
 ddply(InsectSprays, .(spray), summarize, sum=sum(count))
@@ -853,7 +851,7 @@ dim(spraySums)
 head(spraySums)
 ```
 
-#### Merge data
+### Merge data
 Compared with `merge` in base R, it is faster, but less full featured (defaults to left join)
 ```{r eval=FALSE}
 join(x, y, by = NULL, type = "left", match = "all")
@@ -872,7 +870,7 @@ join_all(dfList)
 
 ***
 
-### `dplyr`
+## `dplyr`
 Convert a data frame to a "data frame tbl" object (for easier viewing):
 ```{r eval=FALSE}
 tbl_df(dataframe)
@@ -898,38 +896,38 @@ subsetting rows
 
 ***
 
-### `tidyr`
-#### When column headers are values, not variable names
+## `tidyr`
+### When column headers are values, not variable names
 `gather`
 
-#### When multiple variables are stored in one column
+### When multiple variables are stored in one column
 `separate`  
 default to split on non-alphanumeric values (the `sep` argument)
 
-#### When variables are stored in both rows and columns
+### When variables are stored in both rows and columns
 `spread`
 
-#### When multiple observational units are stored in the same table
+### When multiple observational units are stored in the same table
 `select` followed by `unique`
 
-#### When a single observational unit is stored in multiple tables
+### When a single observational unit is stored in multiple tables
 `bind_rows`
 
 [Return to [Table of Content]]
 
 ***
 
-### Reshape Data
+## Reshape Data
 ```{r load reshape2, eval=FALSE}
 library(reshape2)
 ```
 
-#### Melt data frames
+### Melt data frames
 ```{r eval=FALSE}
 melt(df, id, measure.vars)
 ```
 
-#### Cast data frames
+### Cast data frames
 ```{r eval=FALSE}
 dcast(data, formula, fun.aggregate)
 ```
@@ -939,7 +937,7 @@ See also: `acast`
 
 ***
 
-### Merge Data
+## Merge Data
 `merge`  
 `intersect`
 
@@ -948,17 +946,18 @@ See also: `acast`
 
 ***
 
-## Plotting
+# Plotting
 * [Base]
 * [lattice]
 * [ggplot2]
 * [Graphics Devices]
 * [`grDevices`]
+* [`RColorBrewer`]
 
-### Base
+## Base
 Use `example(points)` to see examples (press `Esc` to exit).
 
-#### Base graphics parameters
+### Base graphics parameters
 Use `?par` to see the complete list. Also: `names(par())`
   
 To see the default values for global graphics paremeters:
@@ -970,7 +969,7 @@ par('lty')
 The plottin symbol (default is open circle).
   
 - `lty`  
-The line type. Line types can either be specified as an integer (0=blank, 1=solid (default), 2=dashed, 3=dotted, 4=dotdash, 5=longdash, 6=twodash) or as one of the character strings "blank", "solid", "dashed", "dotted", "dotdash", "longdash", or "twodash", where "blank" uses âinvisible linesâ (i.e., does not draw them).
+The line type. Line types can either be specified as an integer (0=blank, 1=solid (default), 2=dashed, 3=dotted, 4=dotdash, 5=longdash, 6=twodash) or as one of the character strings "blank", "solid", "dashed", "dotted", "dotdash", "longdash", or "twodash", where "blank" uses ‘invisible lines’ (i.e., does not draw them).
   
 - `col`  
 The plotting color. The `colors()` function provides a vector of colors by name.
@@ -986,7 +985,7 @@ Number of plots per row, column (plots are filled column-wise).
   
 The par() function is used to specify global graphics parameters that affect all plots in an R session. (Use `dev.off` or `plot.new` to reset to the defaults.)
 
-#### Scatterplot
+### Scatterplot
 ```{r}
 library('datasets')
 
@@ -1022,7 +1021,7 @@ Other functions that add to a plot (but do not create a plot):
 add arbitrary text to the margines (inner or outer) of the plot
 - `axis`
 
-#### Boxplot
+### Boxplot
 ```{r}
 boxplot(cars)
 
@@ -1032,7 +1031,7 @@ boxplot(Temp ~ Month, data = airquality, xlab = 'Month', ylab = 'Ozone (ppb)')
 abline(h=mean(airquality$Temp, na.rm = TRUE), lwd=2, col='red', lty=2)  
 ```
 
-#### Histogram
+### Histogram
 ```{r}
 hist(cars$speed, col='green', breaks=10)
 rug(cars$speed)
@@ -1040,17 +1039,17 @@ rug(cars$speed)
 abline(v=mean(cars$speed, na.rm=TRUE), lwd=4)
 ```
 
-#### Barplot
+### Barplot
 ```{r}
 barplot(table(Puromycin$state))
 ```
 
-#### Create subplots:
+### Create subplots
 ```{r eval=FALSE}
 par(mfcol=c(1,2))
 ```
 
-#### Use `with` to simplify code:
+### Use `with` to simplify code:
 ```{r echo=-1}
 par(mfcol=c(1,2))
 with(cars, {
@@ -1066,7 +1065,7 @@ with(cars, {
 
 ***
 
-### lattice
+## lattice
 ```{r}
 library(lattice)
 state <- data.frame(state.x77, region=state.region)
@@ -1080,8 +1079,8 @@ Takes other arguments such as `pch`, `col`, `main`
 
 ```{r eval=FALSE}
 p2 <- xyplot(y ~ x | f, panel = function(x, y, ...) {
-  panel.xyplot(x, y, ...)  ## First call default panel function
-  panel.lmline(x, y, col = 2)  ## Overlay a simple linear regression line
+  panel.xyplot(x, y, ...)  # First call default panel function
+  panel.lmline(x, y, col = 2)  # Overlay a simple linear regression line
 })
 print(p2)
 ```
@@ -1094,17 +1093,25 @@ Also:
 `trellis.par.set()` can be used to finely control the appearance of all lattice plots.
 
 
-
-
 [Return to [Table of Content]]
 
 ***
 
-### ggplot2
-website: http://ggplot2.org
+## ggplot2
+Website: http://ggplot2.org
+  
+Basic components of ggplot2 plots:
 
-#### `qplot`
-Scatterplot:
+* data frame
+* aesthetic mappings (how data are mapped to color, size, etc.)
+* geoms (geometric objects; i.e., points, lines, shapes)
+* facets (panels)
+* stats (e.g., binning, quantiles, smoothing)
+* scales (what coding an aesthetic map uses; e.g., male = red, female = blue)
+* coordinate system
+
+### `qplot`
+#### Scatterplot
 ```{r}
 library(ggplot2)
 ```
@@ -1129,28 +1136,35 @@ qplot(conc, rate,
       geom_smooth(method='lm')
 ```
 
-Histrograms:
+#### Boxplot
 ```{r}
-library('datasets')
-qplot(hwy, data=mpg, fill=drv)
-qplot(hwy, data=mpg, geom='density', color=drv)
+qplot(drv, hwy, data=mpg, geom='boxplot', color=manufacturer)
 ```
 
-Facets:
+#### Histrograms
+```{r}
+library('datasets')
+qplot(hwy, data=mpg, fill=drv, binwidth=10)
+qplot(hwy, data=mpg, geom='density', color=drv)  # density function
+```
+
+#### Facets
 ```{r}
 qplot(displ, hwy, data=mpg, facets=.~drv)
 qplot(hwy, data=mpg, facets=drv~., binwidth=2)
 ```
-left of ~ : rows of the panel
-right of ~ : columns of the panel
+left of `~`: rows of the panel
+right of `~`: columns of the panel
 
 
-#### `ggplot`
+### `ggplot`
 ```{r eval=FALSE}
 ggplot(data, aes(x, y)) 
     + geom_point(color='steelblue', size=4, alpha=1/2)
-    + geom_smooth(size=4, linetype=3, method='lm', se=FALSE)
-    + facet_grid(. ~ factor.var)
+    + geom_smooth(size=4, linetype=3, method='lm', se=FALSE) 
+    # se: standard errors (confidence intervals) turned on/off
+    + facet_grid(. ~ factor.var, margins=TRUE)  
+    # margins: display the marginal totals over each row and column
     + labs(title, x, y)
     + theme_bw(base_family='Times', base_size=10) # base_family: font
 ```
@@ -1164,6 +1178,9 @@ Additonal options:
 ```{r eval=FALSE}
 geom_line()
 facet_wrap(formula, nrow, ncol)
+
+# boxplot
+geom_boxplot() 
 
 # annotation
 xlab()
@@ -1188,7 +1205,7 @@ coord_cartesian(ylim=c(y.min, y.max))  # outlier included
 
 ***
 
-### Graphics Devices
+## Graphics Devices
 Use `?Devices` to see the graphics devices available on current system.
 
 ```{r eval=FALSE}
@@ -1225,13 +1242,12 @@ dev.copy2pdf()
 ```
 
 
-
 [Return to [Table of Content]]
 
 ***
 
 
-### `grDevices`
+## `grDevices`
 ```{r}
 library(grDevices)
 colors <- colors()
@@ -1241,7 +1257,8 @@ sample(colors, 10)
 
 ```{r}
 pal <- colorRamp(c('red', 'blue'))
-pal(1)
+# gives RGB code corresponding to input number(s) (which can only be between 0 and 1)
+pal(1)  
 pal(seq(0,1,len=6))
 ```
 
@@ -1250,6 +1267,19 @@ p1 <- colorRampPalette(c('red', 'blue'))
 p1(2)  # return n number of colors (in hex code)
 ```
 
+Also: use `rgb(red, green, blue, alpha)` to control color and opacity.
+
+
+[Return to [Table of Content]]
+
+***
+
+## `RColorBrewer`
+```{r}
+library(RColorBrewer)
+cols <- brewer.pal(3, 'BuGn')
+pal <- colorRampPalette(cols)
+```
 
 
 [Return to [Table of Content]]
